--- a/results.tex
+++ b/results.tex
@@ -10,23 +10,26 @@ methods to solve MIP: Conjugate Gradient (CG), Conjugate Gradient
 Preconditioned with Symmetric Gauss-Seidel (PCG-SGS), Conjugate Gradient
 Preconditioned with ML using Uncoupled aggregation (PCG-MLU),
 Conjugate Gradient Preconditioned with ML using MIS aggregation (PCG-MLMIS),
-and AGMG. The computations are performed using a $S_n$ code.
+and AGMG. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Fourier Analyses}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Assessing some of the properties of Source Iteration accelerated with DSA is
-often performed thanks to a Fourier analysis \cite{larsen_dsa,consistent_p1},
-where the error is decomposed into different modes. By inspecting the 
+A Fourier analysis is often performed to assess some of the properties of 
+DSA-accelerated transport solves \cite{larsen_dsa,consistent_p1}. In a Fourier analysis,
+the error in the solution is decomposed into Fourier modes. By inspecting the 
 damping of the different error modes, the effectiveness of a SI+DSA scheme can 
 be studied, often in an infinite homogeneous problem. The largest damping
 factor is the spectral radius of the method. The smaller the spectral radius,
-the faster the scheme converges. If the spectral
-radius is greater than one, the method is unstable. 
-\subsubsection{Spectral radius as a function of the $S_n$ order}
-This Fourier analysis was carried on a square cell, using a
-Gauss-Legendre-Chebyshev (GLC) quadrature. The medium is homogeneous with a 
+the faster the scheme will converge. \textcolor{red}{A spectral radius greater than one denotes
+an unstable method.} 
+
+\subsubsection{Spectral radius as a function of the \sn order}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+This Fourier analysis is carried on a square cell, using a
+Gauss-Legendre-Chebyshev (GLC) angular quadrature. The medium is homogeneous with a 
 scattering ratio $c=0.9999$; periodic boundary conditions are used. The results 
 are plotted on \Cref{fig_fa_sn}, where the $x-$axis is the mesh size in mean free 
 paths and the $y-$axis is the spectral radius. There are four curves corresponding 
@@ -34,24 +37,28 @@ to different $S_n$ orders: $S_2$, $S_4$, $S_8$ and $S_{16}$.
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.5\textwidth]{sn_order_9999}
-  \caption{Fourier analysis as a function of the mesh optical thickness
-    various}
+  \caption{Fourier analysis as a function of the mesh optical thickness, square cell,
+    various \sn orders.}
   \label{fig_fa_sn}
 \end{figure}
-Looking at \Cref{fig_fa_sn}, we can conclude that MIP is stable for every 
+From \Cref{fig_fa_sn}, we can conclude that MIP is stable for every 
 cell size. The spectral radius is always less than 0.5, except for $S_2$ where 
-it is about 0.7.
+it is about 0.7. In the fine mesh limit, the spatial continuum results are recovered:
+the spectral radius of SI+DSA using an $S_2$ quadrature in 2D is $0.5c$; as the angular 
+quadrature is refined, the standard result of $0.2247c$ for the spectral result is obtained.
+
 \subsubsection{Spectral radius as a function of the cell aspect ratio}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 For this Fourier analysis, we use a $S_{16}$ GLC quadrature. The medium is
-again homogeneous with $c=0.9999$ and periodic boundary conditions. 
+again homogeneous with $c=0.9999$ and periodic boundary conditions apply. 
 On \Cref{fig_fa_ar}, the five curves correspond to the following cell aspect 
-ratio: $\frac{Y}{X}=\frac{1}{16}$, $\frac{Y}{X}=\frac{1}{4}$,
+ratios: $\frac{Y}{X}=\frac{1}{16}$, $\frac{Y}{X}=\frac{1}{4}$,
 $\frac{Y}{X}=1$, $\frac{Y}{X}=4$, $\frac{Y}{X}=16$, and $\frac{Y}{X}=100$.
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.5\textwidth]{aspect_ratio_9999_2}
   \caption{Fourier analysis as a function of the mesh optical thickness,
-  $S_{16}$, various aspect ratios}
+  $S_{16}$, various aspect ratios.}
   \label{fig_fa_ar}
 \end{figure}
 MIP is stable for every aspect ratio, including 100, and the maximum spectral radius
@@ -61,16 +68,16 @@ is about 0.5.
 \subsection{Numerical results using MIP-DSA implemented in an $S_n$ code}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsubsection{Homogeneous medium test case}  \label{sec_homog}
+\subsubsection{Homogeneous test problems}  \label{sec_homog}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-We compare different solvers for MIP-DSA on a homogeneous medium, $100cm
+We compare different solvers for MIP-DSA using a homogeneous medium, $100cm
 \times 100cm$, $\Sigma_t = 1cm^{-1}$ and $\Sigma_s = 0.999cm^{-1}$, with
 vacuum boundary conditions and a source of intensity $1cm^{-3}s^{-1}$. We
-use a $S_8$ Gauss-Legendre-Chebyshev quadrature, a Source Iteration solver
+use a $S_8$ GLC angular quadrature, Source Iteration as solver
 with relative tolerance of $10^{-8}$ and a relative tolerance of
 $10^{-10}$ for MIP-DSA. The medium is discretized using two different meshes:
-\begin{description}
+\begin{enumerate}
   \item[Quadrilateral grid:] the mesh is composed of 49236 quadrilateral
     cells that to 197052 degrees of freedom.
   \item[Polygonal grid:] the mesh is composed of 45204 triangles, 823
@@ -78,8 +85,12 @@ $10^{-10}$ for MIP-DSA. The medium is discretized using two different meshes:
     octagons, for a total of 55909 cells and 193991 degrees of freedom. This
     example will allow us to test MIP and the different preconditioners on a
     mesh composed of different cell types.
-\end{description}
-The meshes and the solutions of these problems are given on \Cref{homog_test}.
+\end{enumerate}
+%
+The meshes and the numerical solutions are given on \Cref{homog_test}.
+In \Cref{comparison_homog_quad}, the different solvers, used with the
+quadrilateral grid, are compared.
+%
 \begin{figure}[H]
   \centering
   \begin{subfigure}{0.45\textwidth}
@@ -95,8 +106,7 @@ The meshes and the solutions of these problems are given on \Cref{homog_test}.
   \caption{Meshes and scalar fluxes}
   \label{homog_test}
 \end{figure}
-In \Cref{comparison_homog_quad}, the different solvers, used with the
-quadrilateral grid, are compared:
+%
 \begin{table}[H]
   \begin{center}
     \caption{Comparison of different preconditioners for quadrilateral cells}
@@ -166,7 +176,7 @@ In this example, a heterogeneous geometry with three materials is used. It is
 composed of 184 triangles, 3720 quadrilaterals and 2791 regular hexagons of 
 side $0.05cm$ for a total of 6695 cells and 32178 degrees of freedom (spatial 
 unknowns per angular direction). The domain is $5.28275cm$ by $4.6cm$. 
-Reflective boundary conditions are used. A $S_{16}$ Gauss-Legendre-Chebyshev 
+Reflective boundary conditions are used. A $S_{16}$ GLC 
 quadrature is used. The SI solver has a relative tolerance of 
 $10^{-8}$ and the relative tolerance for MIP is $10^{-10}$. \Cref{hex_zones}
 shows the problem geometry and the material properties are in given
@@ -182,7 +192,7 @@ shows the problem geometry and the material properties are in given
     \caption{Properties of the different zones}
     \begin{tabular}{|c|c|c|c|}
       \hline
-       & Inner zone & Intermediate zone & Outer zone \\
+       & Inner region & Intermediate region & Outer region \\
       $\Sigma_t$ $(cm^{-1})$ & 1.5 & 1.0 & 1.0 \\
       $\Sigma_s$ $(cm^{-1})$ & 1.4999 & 0.999 & 0.3 \\
      source $(cm^{-3}s^{-1}$ & 1.0 & 0.0 & 0.0 \\
@@ -192,6 +202,7 @@ shows the problem geometry and the material properties are in given
   \end{center}
 \end{table}
 The different solvers are compared in \Cref{comparison_hex}.
+\textcolor{red}{really think problem, why?}
 \begin{table}[H]
   \begin{center}
     \caption{Comparison of preconditioners, heterogeneous problem}
@@ -220,7 +231,7 @@ algebraic multigrid preconditioners, in this heterogeneous test AGMG requires
 significantly fewer iterations than the Trilinos implementation, PCG-MLU, 
 and PCG-MLMIS.
 
-\subsubsection{AMR mesh}
+\subsubsection{Locally refined grid}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 In this example \cite{mip}, the domain is $10cm\times 10cm$. The left and bottom
@@ -237,13 +248,13 @@ As in the previous example, the domain is composed if three zones (see
 \end{figure}
 \begin{table}
   \begin{center}
-    \caption{Properties}
+    \caption{Material properties, AMR-like test problem}
     \begin{tabular}{|c|c|c|c|}
       \hline
-      & Green zone & Red zone & Blue zone \\
-    $\Sigma_t$ $(cm^{-1})$ & 1.5 & 1. \\
+      & Inner region & Intermediate region & Outer region  \\ \hline
+    $\Sigma_t$ $(cm^{-1})$ & 1.5  & 1.  & \textcolor{red}{1.0 ?} \\
     $\Sigma_s$ $(cm^{-1})$ & 1.44 & 0.9 & 0.3 \\
-  Source $(cm^{-3}s^{-1})$ & 1.0 & 0.0 & 0.0 \\
+  Source $(cm^{-3}s^{-1})$ & 1.0  & 0.0 & 0.0 \\
       \hline
     \end{tabular}
     \label{prop_amr}
@@ -286,7 +297,7 @@ MIP calculation (s) & NA   & 48.1908 & 81.0992  & 25.2699 & 25.0699  &
 \end{table}
 The conclusions are similar to the ones made for our previous tests.
 
-\subsubsection{Rectangular cells}
+\subsubsection{High aspect ratio grid}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \red{When the aspect ratio is high and the scattering ratio is close to one, MIP
